# EpubReader

./: CMakeLists.txt
Headers/: epub.h  reader.h
Sources/: main.c
Sources/Core/: htmlParsing.c  prepareStructs.c  utils.c
Sources/Core/Init/: prepareEpub.c  prepareStructs.c
Sources/Render/: InitRaylib.c
